# fluentry-app

./: .gitignore  README.md  sonar-project.properties
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  worker.py
backend/app/api/: auth.py  drills.py  lessons.py  practice.py  users.py
backend/app/core/: config.py
backend/app/data/: fluentry.db
backend/app/data/mfa/session-2d5fadee-692b-40b7-a1b6-dc8cd4d1a2f3/output/: alignment_analysis.csv
backend/app/data/mfa/session-51df16b4-d043-4c18-9955-37595eb6f933/output/: alignment_analysis.csv
backend/app/data/mfa/session-880f4b28-0b7c-4d58-ab93-9783e4dd742c/output/: alignment_analysis.csv
backend/app/data/mfa/session-cff009ad-24c6-45fe-879c-fa75b425d376/output/: session-cff009ad-24c6-45fe-879c-fa75b425d376.TextGrid
backend/app/schemas/: auth.py  drill.py  lesson.py
backend/app/services/: db.py  drill_store.py  lesson_store.py  rate_limit.py  session_store.py  storage.py  user_metrics.py
backend/app/services/pronunciation/: audio_prep.py  textgrid_parser.py
backend/app/tasks/: practice_tasks.py
backend/speakup_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_scope.py  test_drill_store_unit.py  test_mailer.py  test_migrations_smoke.py  test_runtime_and_rate_limit.py  test_sso_service.py  test_storage_unit.py  test_user_metrics_unit.py
docs/: analytics-taxonomy.md  deployment.md  go-live-checklist.md
infra/: Dockerfile.backend
mobile/: App.tsx  README.md  eslint.config.mjs  jest.setup.ts  package.json  (+3 more)
(+101 files in other folders)
