[project]
name = "speakup-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Fluentry"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
  "pydantic[email]>=2.13.4",
  "python-multipart>=0.0.28",
  "celery>=5.4.0",
  "redis>=5.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
