[project]
name = "speakup-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Fluentry"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
  "pydantic[email]>=2.13.4",
  "python-multipart>=0.0.28",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "PyJWT>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.28.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=app --cov-report=xml --cov-fail-under=70"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:starlette.exceptions.StarletteDeprecationWarning",
]
